Remove dh_undocumented
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20160306+unreleased) UNRELEASED; urgency=medium
+
+  * Remove dh_undocumented.
+
+ -- Niels Thykier <niels@thykier.net>  Thu, 10 Mar 2016 03:32:41 +0000
+
 debhelper (9.20160306) unstable; urgency=medium
 
   [ Niels Thykier ]
