debhelper.pod: Remove two unnecessary words
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -549,7 +549,7 @@ B<--no-parallel> or passing B<--max-parallel> with a value of 1.
 
 The B<dh> command will not accept any of the deprecated "manual
 sequence control" parameters (B<--before>, B<--after>, etc.).  Please
-migrate to use override targets instead.
+use override targets instead.
 
 =item -
 
