dh_install: Improve not-installed documentation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 debhelper (9.20160306+unreleased) UNRELEASED; urgency=medium
 
   * Remove dh_undocumented.
+  * dh_install: Attempt to improve the documentation of the
+    config file "debian/not-installed".
 
  -- Niels Thykier <niels@thykier.net>  Thu, 10 Mar 2016 03:32:41 +0000
 
