dh_compress: Correctly handle -P/abs/dir
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (9.20160306+unreleased) UNRELEASED; urgency=medium
   * Remove dh_undocumented.
   * dh_install: Attempt to improve the documentation of the
     config file "debian/not-installed".
+  * dh_compress: Gracefully handle absolute paths passed via
+    the -P option.  Thanks to Andreas Beckmann for reporting
+    the issue.  (Closes: #818049)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 10 Mar 2016 03:32:41 +0000
 
