--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160306+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160313) unstable; urgency=medium
 
   * Remove dh_undocumented.
   * dh_install: Attempt to improve the documentation of the
@@ -7,7 +7,7 @@ debhelper (9.20160306+unreleased) UNRELEASED; urgency=medium
     the -P option.  Thanks to Andreas Beckmann for reporting
     the issue.  (Closes: #818049)
 
- -- Niels Thykier <niels@thykier.net>  Thu, 10 Mar 2016 03:32:41 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 13 Mar 2016 14:21:02 +0000
 
 debhelper (9.20160306) unstable; urgency=medium
 
