dh_install: Fix regression with non-existing files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ debhelper (9.20160313) unstable; urgency=medium
   * dh_compress: Gracefully handle absolute paths passed via
     the -P option.  Thanks to Andreas Beckmann for reporting
     the issue.  (Closes: #818049)
+  * dh_install: Fix a regression where a non-existing file
+    was ignored if another file was matched for the same
+    destination dir.  Thanks to Ben Hutchings for reporting
+    the issue.  (Closes: #818834)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 13 Mar 2016 14:21:02 +0000
 
