dh,d/rules: Use override targets to avoid B-Ds
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (9.20160313+unreleased) UNRELEASED; urgency=medium
     was ignored if another file was matched for the same
     destination dir.  Thanks to Ben Hutchings for reporting
     the issue.  (Closes: #818834)
+  * d/rules: Use overrides to disable unnecessary helpers
+    (for which debhelper does not Build-Depend on the
+    necessary packages to run the tools).
 
  -- Niels Thykier <niels@thykier.net>  Thu, 31 Mar 2016 21:09:07 +0000
 
