RUn dh-autoreconf seq. by default in compat 10
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -603,6 +603,12 @@ The B<dh_installinit> command now defaults to
 B<--restart-after-upgrade>.  For packages needing the previous
 behaviour, please use B<--no-restart-after-upgrade>.
 
+=item -
+
+The B<autoreconf> sequence is now enabled by default.  Please pass
+B<--without autoreconf> to B<dh> if this is not desirable for a given
+package
+
 =back
 
 =back
