--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ debhelper (9.20160313+unreleased) UNRELEASED; urgency=medium
   * d/rules: Use overrides to disable unnecessary helpers
     (for which debhelper does not Build-Depend on the
     necessary packages to run the tools).
+  * dh: Enable "autoreconf" sequence by default in compat
+    10 (or higher).  (Closes: #480576)
+  * d/control: Add a dependency on dh-autoreconf due to
+    the above.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 31 Mar 2016 21:09:07 +0000
 
