autoscripts/*-makeshlibs: Remove unneeded files
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ debhelper (9.20160313+unreleased) UNRELEASED; urgency=medium
     10 (or higher).  (Closes: #480576)
   * d/control: Add a dependency on dh-autoreconf due to
     the above.
+  * autoscripts/*-makeshlibs: Remove again.  Most of the
+    reverse dependencies have migrated already.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 31 Mar 2016 21:09:07 +0000
 
