d/compat: Mark compat 10 as ready public testing
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -504,7 +504,7 @@ configuration.
 
 =item v10
 
-This compatibility level is still open for development; use with caution.
+This compatibility level is open for beta testing; changes may occur.
 
 Changes from v9 are:
 
