--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ debhelper (9.20160313+unreleased) UNRELEASED; urgency=medium
     the above.
   * autoscripts/*-makeshlibs: Remove again.  Most of the
     reverse dependencies have migrated already.
+  * Declare compat 10 ready for testing.
 
  -- Niels Thykier <niels@thykier.net>  Thu, 31 Mar 2016 21:09:07 +0000
 
