--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160313+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160402) unstable; urgency=medium
 
   * Remove dh_desktop.
   * dh_install: Fix a regression where a non-existing file
@@ -16,7 +16,7 @@ debhelper (9.20160313+unreleased) UNRELEASED; urgency=medium
     reverse dependencies have migrated already.
   * Declare compat 10 ready for testing.
 
- -- Niels Thykier <niels@thykier.net>  Thu, 31 Mar 2016 21:09:07 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 19:20:17 +0000
 
 debhelper (9.20160313) unstable; urgency=medium
 
