--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
+
+  * d/control: Requre dh-autoreconf (>= 12) to ensure
+    non-autotools can be built in compat 10.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 20:57:18 +0000
+
 debhelper (9.20160402) unstable; urgency=medium
 
   * Remove dh_desktop.
