dh: Stricter handling of unknown NOOP promises
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
 
   * d/control: Requre dh-autoreconf (>= 12) to ensure
     non-autotools can be built in compat 10.
+  * dh: In a "PROMISE: DH NOOP" clause, make no assumptions
+    about being able to skip "foo(bar)" if "foo" is not known.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 20:57:18 +0000
 
