--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
     non-autotools can be built in compat 10.
   * dh: In a "PROMISE: DH NOOP" clause, make no assumptions
     about being able to skip "foo(bar)" if "foo" is not known.
+  * debhelper.pod: Use DEB_HOST_ARCH instead of the incorrect
+    "build architecture".  Thanks to Helmut Grohne for the
+    report.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 20:57:18 +0000
 
