dh_makeshlibs: Use the same SONAME regex as dpkg-shlibdeps
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
   * debhelper.pod: Use DEB_HOST_ARCH instead of the incorrect
     "build architecture".  Thanks to Helmut Grohne for the
     report.
+  * dh_makeshlibs: Use same regex for extracting SONAME as
+    dpkg-shlibdeps.  (Closes: #509931)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 20:57:18 +0000
 
