--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160403) unstable; urgency=medium
 
   * d/control: Requre dh-autoreconf (>= 12) to ensure
     non-autotools can be built in compat 10.
@@ -10,7 +10,7 @@ debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
   * dh_makeshlibs: Use same regex for extracting SONAME as
     dpkg-shlibdeps.  (Closes: #509931)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 20:57:18 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 03 Apr 2016 08:29:35 +0000
 
 debhelper (9.20160402) unstable; urgency=medium
 
