dh_makeshlibs: Special case unversioned SO with symbols
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ debhelper (9.20160402+unreleased) UNRELEASED; urgency=medium
     report.
   * dh_makeshlibs: Use same regex for extracting SONAME as
     dpkg-shlibdeps.  (Closes: #509931)
+  * dh_makeshlibs: Add an ldconfig trigger if there is an
+    unversioned SONAME and the maintainer provides a
+    symbols file.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 02 Apr 2016 20:57:18 +0000
 
