--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ debhelper (9.20160403) unstable; urgency=medium
   * dh_makeshlibs: Add an ldconfig trigger if there is an
     unversioned SONAME and the maintainer provides a
     symbols file.
+  * dh: Fix bug where "--help" or "--list" would not work
+    unless "debian/compat" existed and had a supported
+    compat level.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 03 Apr 2016 08:56:07 +0000
 
