--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * dh: Fix bug where "--help" or "--list" would not work
     unless "debian/compat" existed and had a supported
     compat level.  (Closes: #820508)
+  * dh_compress: Gracefully handle debian (or any other
+    path segment in the package "tmpdir") being a symlink
+    pointing outside the same directory.  Thanks to
+    Bernhard Miklautz for the report.  (Closes: #820711)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
