--- a/debhelper.pod
+++ b/debhelper.pod
@@ -273,12 +273,12 @@ From time to time, major non-backwards-compatible changes need to be made
 to debhelper, to keep it clean and well-designed as needs change and its
 author gains more experience. To prevent such major changes from breaking
 existing packages, the concept of debhelper compatibility levels was 
-introduced. You tell debhelper which compatibility level it should use, and
+introduced. You must tell debhelper which compatibility level it should use, and
 it modifies its behavior in various ways.  The compatibility level is
 specified in the F<debian/compat> file and the file must be present.
 
 Tell debhelper what compatibility level to use by writing a number to
-F<debian/compat>. For example, to turn on v9 mode:
+F<debian/compat>. For example, to use v9 mode:
 
   % echo 9 > debian/compat
 
