--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     not built by CDBS.  (Closes: #811059)
   * debhelper.pod: Add a line stating that debian/compat
     is mandatory.  (Closes: #805405)
+  * dh_strip: Apply patch from Peter Pentchev to only strip
+    static libraries with a basename matching "lib.*\.a".
+    (Closes: #820446)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
