d/changelog: Fix a typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -307,7 +307,7 @@ debhelper (9.20151004) unstable; urgency=medium
     when "-V" is passed to dpkg-gencontrol.  This relies on
     dpkg-deb getting everything but the extension correct
     (see #575059, #452273 for why it does not produce the
-     correct extesion).
+     correct extension).
     (Closes: #516721, #677353, #672282)
   * Dh_Lib.pm: Drop now unused "udeb_filename" subroutine.
   * dh_strip.1: Correct the documentation about ddebs to
