ant.pm: Reproducible username for Ant builds
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * dh_strip: Apply patch from Peter Pentchev to only strip
     static libraries with a basename matching "lib.*\.a".
     (Closes: #820446)
+  * ant.pm: Apply patch from Emmanuel Bourg to pass a
+    normalised "user.name" parameter to ant.
+    (Closes: #824490)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
