Drop all uses of autoscripts/*-moveconffile
The transition for these must have been completed with Wheezy (and
probably even Squeeze).

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,11 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * ant.pm: Apply patch from Emmanuel Bourg to pass a
     normalised "user.name" parameter to ant.
     (Closes: #824490)
+  * dh_installudev/dh_installmodules: Drop maintainer
+    script snippets for migrating conffiles.
+    - Side effect, avoids portability issue with certain
+      shell implementations.  (Closes: #815158)
+  * autoscripts/*inst-moveconffile: Remove unused files.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
