--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     - Side effect, avoids portability issue with certain
       shell implementations.  (Closes: #815158)
   * autoscripts/*inst-moveconffile: Remove unused files.
+  * dh: Update documentation to reflect the current
+    implementation.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
