Create jessie-backports version without dbgsym support
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20160403~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+  * Disable automatic dbgsym as it requires dpkg-dev 1.18.2
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 10 Jun 2016 17:48:34 +0000
+
 debhelper (9.20160403) unstable; urgency=medium
 
   * d/control: Requre dh-autoreconf (>= 12) to ensure
