Remove support for compat 4
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * autoscripts/*inst-moveconffile: Remove unused files.
   * dh: Update documentation to reflect the current
     implementation.
+  * Remove support for compat 4.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
