dh_strip: Add debuglinks even under D_B_O=noautodbgsym
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,10 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * dh: Update documentation to reflect the current
     implementation.
   * Remove support for compat 4.
+  * dh_strip: Add debuglinks to ELF binaries even with
+    DEB_BUILD_OPTIONS=noautodbgsym to make the regular deb
+    bit-for-bit reproducible with vs. without this flag.
+    Thanks to Helmut Grohne for the report.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
