--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,13 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     DEB_BUILD_OPTIONS=noautodbgsym to make the regular deb
     bit-for-bit reproducible with vs. without this flag.
     Thanks to Helmut Grohne for the report.
+  * dh_installcatalogs: Apply patch from Helmut Grohne to
+    explicitly trigger a new update-sgmlcatalog trigger,
+    since dpkg does not triger conffiles on package removal.
+    (Closes: #825005)
+  * dh_installcatalos: Apply patch from Helmut Grohne to
+    remove autoscript for a transition that completed in
+    Wheezy.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
