dh_strip: Use strip -D unconditionally for static libs
Since binutils in stable supports "--enable-deterministic-archives"
just pass it unconditionally.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,9 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * dh_installcatalos: Apply patch from Helmut Grohne to
     remove autoscript for a transition that completed in
     Wheezy.
+  * dh_strip: Unconditionally pass --enable-deterministic-archives
+    to strip for static libs as the stable version of binutils
+    supports it.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
