--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * dh_strip: Use file(1) to determine the build-id when
     available.  This saves an readelf call for every binary in
     the package.
+  * dh_strip: Cache file(1) output to avoid calling file(1)
+    twice on all ELF binaries in the package.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
