--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,8 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Add better error messages when a debhelper program
     fails due to an executable config file not terminating with
     success.  (Closes: #818933)
+  * dh_strip: Pass -e to file(1) to skip tests for file formats
+    that dh_strip does not care about.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
