--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,7 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     success.  (Closes: #818933)
   * dh_strip: Pass -e to file(1) to skip tests for file formats
     that dh_strip does not care about.
+  * Bump standards-version to 3.9.8 - no changes required.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
