--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160618) unstable; urgency=medium
 
   * dh: Fix bug where "--help" or "--list" would not work
     unless "debian/compat" existed and had a supported
@@ -53,7 +53,7 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     that dh_strip does not care about.
   * Bump standards-version to 3.9.8 - no changes required.
 
- -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 14:41:05 +0000
 
 debhelper (9.20160403) unstable; urgency=medium
 
