Dh_Lib: Reject requests for compat 4
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20160618.1) UNRELEASED; urgency=medium
+
+  * Dh_Lib.pm: Reject requests for compat 4 instead of
+    silently accepting it (while all helpers no longer
+    check for it).
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 20:27:28 +0000
+
 debhelper (9.20160618) unstable; urgency=medium
 
   * dh: Fix bug where "--help" or "--list" would not work
