--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (9.20160618.1) UNRELEASED; urgency=medium
+debhelper (9.20160618.1) unstable; urgency=medium
 
   * Dh_Lib.pm: Reject requests for compat 4 instead of
     silently accepting it (while all helpers no longer
     check for it).
 
- -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 20:27:28 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 20:52:29 +0000
 
 debhelper (9.20160618) unstable; urgency=medium
 
