d/changelog: New changelog entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 21:10:26 +0000
+
 debhelper (9.20160618.1) unstable; urgency=medium
 
   * Dh_Lib.pm: Reject requests for compat 4 instead of
