--- a/debhelper.pod
+++ b/debhelper.pod
@@ -556,6 +556,14 @@ package
 
 =back
 
+=item v11
+
+This compatibility level is still open for development; use with caution.
+
+Changes from v10 are:
+
+=over 8
+
 =back
 
 =head1 NOTES
