dh_installmenu: Stop installing menu files in compat 11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -564,6 +564,11 @@ Changes from v10 are:
 
 =over 8
 
+=item -
+
+B<dh_installmenu> no longer installs F<menu> files.  The
+F<menu-method> files are still installed.
+
 =back
 
 =head1 NOTES
