dh_clean: Drop -k in compat 11
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -568,6 +568,15 @@ Changes from v10 are:
 B<dh_installmenu> no longer installs F<menu> files.  The
 F<menu-method> files are still installed.
 
+=item -
+
+The B<-s> (B<--same-arch>) option is removed.
+
+=item -
+
+Invoking B<dh_clean -k> now causes an error instead of a deprecation
+warning.
+
 =back
 
 =head1 NOTES
