Updated German translation
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,10 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
   * dh_*: Deprecate -s in favor of -a.  The -s option is
     removed in compat 11.
 
+  [ Translations ]
+  * Update German translation (Chris Leick + Eduard Bloch)
+    (Closes: #827699)
+
  -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 21:10:26 +0000
 
 debhelper (9.20160618.1) unstable; urgency=medium
