Add new changelog
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (9.20160618.1~bpo8+1) jessie-backports; urgency=medium
+
+  * Rebuild for jessie-backports.
+  * Revert sgml-base trigger change as it requires a newer
+    version of sgml-base.  Bug being reopened: #825005
+  * Disabled features from previous bpo releases:
+    - Disable automatic dbgsym as it requires dpkg-dev 1.18.2
+
+ -- Niels Thykier <niels@thykier.net>  Mon, 20 Jun 2016 17:59:46 +0000
+
 debhelper (9.20160618.1) unstable; urgency=medium
 
   * Dh_Lib.pm: Reject requests for compat 4 instead of
