--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,11 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
     (menu-methods are still installed).
   * dh_*: Deprecate -s in favor of -a.  The -s option is
     removed in compat 11.
+  * dh_strip: Fix regression in 9.20160618, which caused
+    issues when there were hardlinked ELF binaries in a
+    package.  Thanks to Sven Joachim for the report, the
+    analysis/testing and for providing a patch for the
+    most common case.  (Closes: #829142)
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
