--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
     most common case.  (Closes: #829142)
   * Dh_Lib.pm: Cope with the parallel options in make 4.2.
     Thanks to Martin Dorey for the report.  (Closes: #827132)
+  * dh_installdocs: In compat 11, install documentation into
+    /usr/share/doc/mainpackage as requested by policy 3.9.7.
+    Thanks to Sandro Knauß for the report.  (Closes: #824221)
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
