--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,10 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
   * dh_installdocs: In compat 11, install documentation into
     /usr/share/doc/mainpackage as requested by policy 3.9.7.
     Thanks to Sandro Knauß for the report.  (Closes: #824221)
+  * dh_perl: Emit perl:any dependencies when a package only
+    contains perl programs (but no modules of any kind).
+    Thanks to Javier Serrano Polo and Niko Tyni for the
+    report and feedback.  (Closes: #824696)
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
