--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160702) unstable; urgency=medium
 
   * Start on compat 11.
   * dh_installmenu: Stop installing menu files in compat 11
@@ -24,7 +24,7 @@ debhelper (9.20160618.1+unreleased) UNRELEASED; urgency=medium
   * Update German translation (Chris Leick + Eduard Bloch)
     (Closes: #827699)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 18 Jun 2016 21:10:26 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 02 Jul 2016 13:24:21 +0000
 
 debhelper (9.20160618.1) unstable; urgency=medium
 
