--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ debhelper (9.20160702) unstable; urgency=medium
     contains perl programs (but no modules of any kind).
     Thanks to Javier Serrano Polo and Niko Tyni for the
     report and feedback.  (Closes: #824696)
+  * Explicitly Build-Depends on perl:any for pod2man instead
+    of relying on it implicitly via libdpkg-perl.
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
