dh_installdocs: Fix regression wrt symlinked doc directory
If a package uses dh_installdocs' --link-doc option, install_dir could
fail with an error message from install(1), because the symlink might
be dangling.  Use ensure_docdir instead which was designed precisely
for this case.

Regression introduced in commit 71007f72da682dd9d7f932d81ca2ecd5d46a0e70.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ debhelper (9.20160702) unstable; urgency=medium
     of relying on it implicitly via libdpkg-perl.
   * dh_shlibdeps: Clarify that -L is also useful for packages
     using debian/shlibs.local for private libraries.
+  * dh_installdocs: Apply patch from Sven Joachim to fix a
+    regression with --link-doc and installing extra
+    documentation.  (Closes: #830309)
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
