--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ debhelper (9.20160702) unstable; urgency=medium
     report and feedback.  (Closes: #824696)
   * Explicitly Build-Depends on perl:any for pod2man instead
     of relying on it implicitly via libdpkg-perl.
+  * dh_shlibdeps: Clarify that -L is also useful for packages
+    using debian/shlibs.local for private libraries.
 
   [ Translations ]
   * Update German translation (Chris Leick + Eduard Bloch)
