Enable systemd addon by default in compat level 11

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -589,6 +589,12 @@ B<--mainpackage> option.
 
 Please remember to check/update your doc-base files.
 
+=item -
+
+The B<systemd> sequence is now enabled by default.  Please pass
+B<--without systemd> to B<dh> if this is not desirable for a given
+package.
+
 =back
 
 =back
