d/changelog: Add entries for systemd merge
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,11 @@ debhelper (9.20160702+unreleased) UNRELEASED; urgency=medium
   * dh_installdocs: Apply patch from Sven Joachim to fix a
     regression with --link-doc and installing extra
     documentation.  (Closes: #830309)
+  * Apply patches from Michael Biebl to merge dh_systemd_enable
+    and dh_systemd_start from the dh-systemd package.
+    (Closes: #822670)
+  * dh: Enable the systemd helpers by default in compat 10 and
+    later.
 
  -- Niels Thykier <niels@thykier.net>  Fri, 08 Jul 2016 09:44:48 +0000
 
