--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160702+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160709) unstable; urgency=medium
 
   * Explicitly Build-Depends on perl:any for pod2man instead
     of relying on it implicitly via libdpkg-perl.
@@ -13,7 +13,7 @@ debhelper (9.20160702+unreleased) UNRELEASED; urgency=medium
   * dh: Enable the systemd helpers by default in compat 10 and
     later.
 
- -- Niels Thykier <niels@thykier.net>  Fri, 08 Jul 2016 09:44:48 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 09:53:02 +0000
 
 debhelper (9.20160702) unstable; urgency=medium
 
