dh_installdocs: Fix regression in compat 11 mode
The change in commit 863ef397c939340e863be1e96c822934a3167852 was not
quite correct, since ensure_docdir would create the doc directory
under debian/$dh{MAINPACKAGE} rather than debian/$package in C11 mode.

Restore the previous code and fix the original problem in bug #830309
("install: cannot change permissions of
'debian/$package/usr/share/doc/$package': No such file or directory")
by only creating the directory if it is not already a symlink, as is
the case with the --link-doc option.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
+
+  * dh_installdocs: Apply patch from Sven Joachim to make
+    --link-doc work again in compat 11 (See: #830309)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
+
 debhelper (9.20160709) unstable; urgency=medium
 
   * Explicitly Build-Depends on perl:any for pod2man instead
