Add some tests for for dh_installdocs
This is a small test suite for dh_installdocs, motivated by the problems
found in https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=830309.  It
catches both the bug introduced in commit 71007f72da682dd9d7f932d81ca
and the regression caused by commit 863ef397c939340e863be1e96c822934a.

The tests verify that the correct /usr/share/doc symlinks and
directories are set up with and without the --link-doc option, in both
compat level 9 and 11.

Since dh_installdocs runs chown(1), the tests are skipped if run by an
ordinary user and fakeroot is unavailable.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
 
   * dh_installdocs: Apply patch from Sven Joachim to make
     --link-doc work again in compat 11 (See: #830309)
+  * t: Apply patch from Sven Joachim to add some test cases
+    to dh_installdocs's --link-doc behaviour.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
