d/changelog: Add missing Closes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
     --link-doc work again in compat 11 (See: #830309)
   * t: Apply patch from Sven Joachim to add some test cases
     to dh_installdocs's --link-doc behaviour.
+    (Closes: #831465)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
