d/changelog: Document Peter Pentchev contributions
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
   * t: Apply patch from Sven Joachim to add some test cases
     to dh_installdocs's --link-doc behaviour.
     (Closes: #831465)
+  * dh_installinit,dh_systemd_start: Apply patches from
+    Peter Pentchev to make -R default in compat 10 (as
+    documented, but not as implemented).
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
