dh_install: Clarify that not-installed is not related to --exclude
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
   * perl_{build,makemaker}.pm: Apply patch from Dominic
     Hargreaves to explicitly pass -I. to perl.  This is to
     assist with the fix for CVE-2016-1238.  (Closes: #832436)
+  * dh_install: Clarify that "debian/not-installed" is not
+    related to the --exclude parameter.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
