dh_install: Make d/tmp prefix optional in d/not-installed
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
     assist with the fix for CVE-2016-1238.  (Closes: #832436)
   * dh_install: Clarify that "debian/not-installed" is not
     related to the --exclude parameter.
+  * dh_install: Apply patch from Sven Joachim to support
+    the "debian/tmp" prefix being optional in
+    "debian/not-installed".  (Closes: #815506)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
