--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
+debhelper (9.20160814) unstable; urgency=medium
 
   * dh_installdocs: Apply patch from Sven Joachim to make
     --link-doc work again in compat 11 (See: #830309)
@@ -25,7 +25,7 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
     Thanks to Emmanuel Bourg for the suggestion.
     (Closes: #801732)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:19:35 +0000
 
 debhelper (9.20160709) unstable; urgency=medium
 
