--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
+
+  * Nothing yet...
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
+
 debhelper (9.20160814) unstable; urgency=medium
 
   * dh_installdocs: Apply patch from Sven Joachim to make
