Dh_Lib: Fix bug in autotrigger dup detection
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
     If you want to participate in beta testing of new compat
     levels, please review "man 7 debhelper" for more
     information.
+  * Dh_Lib.pm: Fix bug in detection of existing auto-trigger.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
