Add changelog item for previous commit

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
 debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * Dh_Lib.pm: Support a new named "beta-tester" compat level.
     If you want to participate in beta testing of new compat
     levels, please review "man 7 debhelper" for more
     information.
   * Dh_Lib.pm: Fix bug in detection of existing auto-trigger.
+
+  [ Axel Beckert ]
+  * Apply patch by Jens Reyer to fix typo in dh_installdocs man page.
+    (Closes: #836344)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
