Use uppercase "Debian" in package description when the project is meant
Fixes lintian warning capitalization-error-in-description.

Signed-off-by: Axel Beckert <abe@deuxchevaux.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
   [ Axel Beckert ]
   * Apply patch by Jens Reyer to fix typo in dh_installdocs man page.
     (Closes: #836344)
+  * Use uppercase "Debian" in package description when the project is
+    meant. Fixes lintian warning capitalization-error-in-description.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
