--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
     (Closes: #836344)
   * Use uppercase "Debian" in package description when the project is
     meant. Fixes lintian warning capitalization-error-in-description.
+  * Apply "wrap-and-sort -a"
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
