Add a .mailmap file for making "git shortlog" work properly
Signed-off-by: Axel Beckert <abe@deuxchevaux.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
   * Use uppercase "Debian" in package description when the project is
     meant. Fixes lintian warning capitalization-error-in-description.
   * Apply "wrap-and-sort -a"
+  * Add a .mailmap file for making "git shortlog" work properly.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
