Update German translations
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
   * Apply "wrap-and-sort -a"
   * Add a .mailmap file for making "git shortlog" work properly.
 
+  [ Translations ]
+  * Update German translation (Chris Leick) (Closes: #835593)
+
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
 debhelper (9.20160814) unstable; urgency=medium
