debhelper.pod: Fix typo (Thanks to Chris Leick)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -649,7 +649,7 @@ Should you still be interested in the open beta testing, please run:
 
   % echo beta-tester > debian/compat
 
-You will also need to ensure that debian/control as:
+You will also need to ensure that debian/control contains:
 
   Build-Depends: debhelper (>= 9.20160815~)
 
