--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
 
   [ Translations ]
   * Update German translation (Chris Leick) (Closes: #835593)
+  * Update Portuguese translation (Américo Monteiro)
+    (Closes: #835403)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
