Update French translations
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
   * Update German translation (Chris Leick) (Closes: #835593)
   * Update Portuguese translation (Américo Monteiro)
     (Closes: #835403)
+  * Update French translation (Baptiste Jammet) (Closes: #836693)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
 
