--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
+debhelper (10) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Dh_Lib.pm: Support a new named "beta-tester" compat level.
@@ -21,7 +21,7 @@ debhelper (9.20160814+unreleased) UNRELEASED; urgency=medium
     (Closes: #835403)
   * Update French translation (Baptiste Jammet) (Closes: #836693)
 
- -- Niels Thykier <niels@thykier.net>  Sun, 14 Aug 2016 09:30:15 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 11 Sep 2016 09:00:23 +0000
 
 debhelper (9.20160814) unstable; urgency=medium
 
