d/changelog: Add entry for Michael's patch
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (10+unreleased) UNRELEASED; urgency=medium
+
+  * Apply patch from Michael Biebl to take over dh-systemd
+    package to ease backporting to jessie-backports.
+    (Closes: #837585)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
+
 debhelper (10) unstable; urgency=medium
 
   [ Niels Thykier ]
