--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1275,7 +1275,7 @@ msgstr ""
 #: debhelper.pod:538
 msgid ""
 "The B<dh_installdeb> command now shell escapes the lines in the "
-"F<maintscript> config file.  This was the original intend but it did not "
+"F<maintscript> config file.  This was the original intent but it did not "
 "work properly and packages have begun to rely on the incomplete shell "
 "escaping (e.g. quoting file names)."
 msgstr ""
