cmake.pm: Set pkg-config and LIBDIR when cross-building
Co-Author: Helmut Grohne <helmut@subdivi.de>
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
   * Apply patch from Michael Biebl to take over dh-systemd
     package to ease backporting to jessie-backports.
     (Closes: #837585)
+  * Apply patch from Helmut Grohne and Julian Andres Klode
+    to improve cross-building support in the cmake build
+    system.  (Closes: #833789)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
