dh_md5sums.1: Mention dpkg --verify as a consumer
Thanks to Guillem Jover for suggesting it.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
     pass the CC and CXX variables set to the host compilers when
     cross-building.  Thanks to Helmut Grohne for the idea and
     the initial patch.  (Closes: #836988)
+  * dh_md5sums.1: Mention dpkg --verify as a consumer of the
+    output file.  Thanks to Guillem Jover for reporting it.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
