Add a dash in --no-scripts and --only-scripts for consistency
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,11 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
   * debhelper-obsolete-compat.pod: Add a manpage for the
     upgrade checklist for all obsolete/removed compat levels.
     Thanks to Jakub Wilk for the suggestion.
+  * Dh_Getopt,dh_*: Rename --onlyscripts to --only-scripts and
+    --noscripts to --no-scripts for consistency with other
+    options.  The old variants are accepted for compatibility.
+    Thanks to Raphaël Hertzog for the suggestion.
+    (Closes: #838446)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
