--- a/man/po4a/po/debhelper.pot
+++ b/man/po4a/po/debhelper.pot
@@ -2989,7 +2989,7 @@ msgstr ""
 
 #. type: =item
 #: dh_icons:35 dh_installcatalogs:55 dh_installdebconf:66 dh_installemacsen:58 dh_installinit:64 dh_installmenu:49 dh_installmodules:43 dh_installwm:45 dh_makeshlibs:84 dh_usrlocal:43
-msgid "B<-n>, B<--noscripts>"
+msgid "B<-n>, B<--no-scripts>"
 msgstr ""
 
 #. type: textblock
@@ -4377,7 +4377,7 @@ msgstr ""
 
 #. type: =item
 #: dh_installinit:68
-msgid "B<-o>, B<--onlyscripts>"
+msgid "B<-o>, B<--only-scripts>"
 msgstr ""
 
 #. type: textblock
@@ -4402,7 +4402,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 " override_dh_installinit:\n"
-"\tdh_installinit -pfoo --onlyscripts\n"
+"\tdh_installinit -pfoo --only-scripts\n"
 "\tdh_installinit --remaining\n"
 "\n"
 msgstr ""
@@ -5561,7 +5561,7 @@ msgstr ""
 #: dh_makeshlibs:86
 msgid ""
 "Do not add the \"ldconfig\" trigger even if it seems like the package might "
-"need it.  The option is called B<--noscripts> for historical reasons as "
+"need it.  The option is called B<--no-scripts> for historical reasons as "
 "B<dh_makeshlibs> would previously generate maintainer scripts that called "
 "B<ldconfig>."
 msgstr ""
