--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -4074,8 +4074,8 @@ msgstr ""
 #: dh_icons:35 dh_installcatalogs:55 dh_installdebconf:66 dh_installemacsen:58
 #: dh_installinit:64 dh_installmenu:49 dh_installmodules:43 dh_installwm:45
 #: dh_makeshlibs:84 dh_usrlocal:43
-msgid "B<-n>, B<--noscripts>"
-msgstr "B<-n>, B<--noscripts>"
+msgid "B<-n>, B<--no-scripts>"
+msgstr "B<-n>, B<--no-scripts>"
 
 #. type: textblock
 #: dh_icons:37
@@ -5826,8 +5826,8 @@ msgstr "ändert keine F<postinst>-/F<postrm>/F<prerm>-Skripte."
 
 #. type: =item
 #: dh_installinit:68
-msgid "B<-o>, B<--onlyscripts>"
-msgstr "B<-o>, B<--onlyscripts>"
+msgid "B<-o>, B<--only-scripts>"
+msgstr "B<-o>, B<--only-scripts>"
 
 #. type: textblock
 #: dh_installinit:70
@@ -5860,12 +5860,12 @@ msgstr ""
 #, no-wrap
 msgid ""
 " override_dh_installinit:\n"
-"\tdh_installinit -pfoo --onlyscripts\n"
+"\tdh_installinit -pfoo --only-scripts\n"
 "\tdh_installinit --remaining\n"
 "\n"
 msgstr ""
 " override_dh_installinit:\n"
-"\tdh_installinit -pfoo --onlyscripts\n"
+"\tdh_installinit -pfoo --only-scripts\n"
 "\tdh_installinit --remaining\n"
 "\n"
 
@@ -7343,7 +7343,7 @@ msgstr ""
 #: dh_makeshlibs:86
 msgid ""
 "Do not add the \"ldconfig\" trigger even if it seems like the package might "
-"need it.  The option is called B<--noscripts> for historical reasons as "
+"need it.  The option is called B<--no-scripts> for historical reasons as "
 "B<dh_makeshlibs> would previously generate maintainer scripts that called "
 "B<ldconfig>."
 msgstr ""
