--- a/man/po4a/po/es.po
+++ b/man/po4a/po/es.po
@@ -4253,8 +4253,8 @@ msgstr ""
 #: dh_icons:35 dh_installcatalogs:55 dh_installdebconf:66 dh_installemacsen:58
 #: dh_installinit:64 dh_installmenu:49 dh_installmodules:43 dh_installwm:45
 #: dh_makeshlibs:84 dh_usrlocal:43
-msgid "B<-n>, B<--noscripts>"
-msgstr "B<-n>, B<--noscripts>"
+msgid "B<-n>, B<--no-scripts>"
+msgstr "B<-n>, B<--no-scripts>"
 
 # type: textblock
 #. type: textblock
@@ -6145,8 +6145,8 @@ msgstr "No modifica los scripts F<postinst>/F<postrm>/F<prerm>."
 # type: =item
 #. type: =item
 #: dh_installinit:68
-msgid "B<-o>, B<--onlyscripts>"
-msgstr "B<-o>, B<--onlyscripts>"
+msgid "B<-o>, B<--only-scripts>"
+msgstr "B<-o>, B<--only-scripts>"
 
 #. type: textblock
 #: dh_installinit:70
@@ -6181,7 +6181,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 " override_dh_installinit:\n"
-"\tdh_installinit -pfoo --onlyscripts\n"
+"\tdh_installinit -pfoo --only-scripts\n"
 "\tdh_installinit --remaining\n"
 "\n"
 msgstr ""
@@ -7834,7 +7834,7 @@ msgstr ""
 #: dh_makeshlibs:86
 msgid ""
 "Do not add the \"ldconfig\" trigger even if it seems like the package might "
-"need it.  The option is called B<--noscripts> for historical reasons as "
+"need it.  The option is called B<--no-scripts> for historical reasons as "
 "B<dh_makeshlibs> would previously generate maintainer scripts that called "
 "B<ldconfig>."
 msgstr ""
@@ -9673,12 +9673,12 @@ msgstr ""
 
 #~ msgid ""
 #~ "If no upstart job file is installed in the target directory when "
-#~ "B<dh_installinit --onlyscripts> is called, this program will assume that "
+#~ "B<dh_installinit --only-scripts> is called, this program will assume that "
 #~ "an init script is being installed and not provide the compatibility "
 #~ "symlinks or upstart dependencies."
 #~ msgstr ""
 #~ "Si no se instala ninguna tarea de upstart en el directorio destino al "
-#~ "invocar B<dh_installinit --onlyscripts>, el programa supondrá que se está "
+#~ "invocar B<dh_installinit --only-scripts>, el programa supondrá que se está "
 #~ "instalando un script de init, y no ofrecerá los enlaces simbólicos de "
 #~ "compatibilidad o dependencias de upstart."
 
