--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -4383,8 +4383,8 @@ msgstr ""
 #: dh_icons:35 dh_installcatalogs:55 dh_installdebconf:66 dh_installemacsen:58
 #: dh_installinit:64 dh_installmenu:49 dh_installmodules:43 dh_installwm:45
 #: dh_makeshlibs:84 dh_usrlocal:43
-msgid "B<-n>, B<--noscripts>"
-msgstr "B<-n>, B<--noscripts>"
+msgid "B<-n>, B<--no-scripts>"
+msgstr "B<-n>, B<--no-scripts>"
 
 # type: textblock
 #. type: textblock
@@ -6345,8 +6345,8 @@ msgstr ""
 # type: =item
 #. type: =item
 #: dh_installinit:68
-msgid "B<-o>, B<--onlyscripts>"
-msgstr "B<-o>, B<--onlyscripts>"
+msgid "B<-o>, B<--only-scripts>"
+msgstr "B<-o>, B<--only-scripts>"
 
 # type: textblock
 #. type: textblock
@@ -6380,12 +6380,12 @@ msgstr ""
 #, no-wrap
 msgid ""
 " override_dh_installinit:\n"
-"\tdh_installinit -pfoo --onlyscripts\n"
+"\tdh_installinit -pfoo --only-scripts\n"
 "\tdh_installinit --remaining\n"
 "\n"
 msgstr ""
 " override_dh_installinit:\n"
-"\tdh_installinit -ptoto --onlyscripts\n"
+"\tdh_installinit -ptoto --only-scripts\n"
 "\tdh_installinit --remaining\n"
 "\n"
 
@@ -8065,12 +8065,12 @@ msgstr ""
 #: dh_makeshlibs:86
 msgid ""
 "Do not add the \"ldconfig\" trigger even if it seems like the package might "
-"need it.  The option is called B<--noscripts> for historical reasons as "
+"need it.  The option is called B<--no-scripts> for historical reasons as "
 "B<dh_makeshlibs> would previously generate maintainer scripts that called "
 "B<ldconfig>."
 msgstr ""
 "N'ajoutez pas l'action différée (« trigger ») même s'il semble que le paquet "
-"en a besoin. L'option est nommée B<--noscripts> pour des raisons historiques "
+"en a besoin. L'option est nommée B<--no-scripts> pour des raisons historiques "
 "car B<dh_makeshlibs> générait précédemment un script de maintenance qui "
 "appelait B<ldconfig>."
 
@@ -9968,12 +9968,12 @@ msgstr ""
 # type: textblock
 #~ msgid ""
 #~ "If no upstart job file is installed in the target directory when "
-#~ "B<dh_installinit --onlyscripts> is called, this program will assume that "
+#~ "B<dh_installinit --only-scripts> is called, this program will assume that "
 #~ "an init script is being installed and not provide the compatibility "
 #~ "symlinks or upstart dependencies."
 #~ msgstr ""
 #~ "Si aucun fichier de tâche upstart n'est installé dans le répertoire cible "
-#~ "quand B<dh_installinit --onlyscripts> est invoqué, ce programme considère "
+#~ "quand B<dh_installinit --only-scripts> est invoqué, ce programme considère "
 #~ "qu'un script init est en cours d'installation et ne fournit pas les liens "
 #~ "symboliques de compatibilité, ni de dépendances envers upstart."
 
