d/copyright: Clarify copyright and license of dh_systemd*
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
   * cmake.pm: If cmake fails, also down CMakeFiles/CMakeOutput.log
     and CMakeFiles/CMakeError.log if they are present.  Thanks to
     Michael Banck for the suggestion.  (Closes: #839389)
+  * d/copyright: Correct copyright and license of dh_systemd*
+    tools.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
