--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (10+unreleased) UNRELEASED; urgency=medium
+debhelper (10.1) unstable; urgency=medium
 
   * Apply patch from Michael Biebl to take over dh-systemd
     package to ease backporting to jessie-backports.
@@ -26,7 +26,7 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
   * d/copyright: Correct copyright and license of dh_systemd*
     tools.
 
- -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 01 Oct 2016 20:45:27 +0000
 
 debhelper (10) unstable; urgency=medium
 
