--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -1302,7 +1302,7 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:506
-msgid "The main affects of this are:"
+msgid "The main effects of this are:"
 msgstr "Les principales conséquences de cela sont :"
 
 #. type: textblock
@@ -1321,7 +1321,7 @@ msgstr ""
 msgid ""
 "The main caveat is that B<dh_*> now only keeps track of what happened in a "
 "single override target.  When all the calls to a given B<dh_cmd> command "
-"happens in the same override target every thing will work as before."
+"happens in the same override target everything will work as before."
 msgstr ""
 "La principale précaution est que B<dh_*> enregistre uniquement ce qui s'est "
 "passé dans une unique cible de réécriture. Lorsque tous les appels à une "
@@ -1374,7 +1374,7 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:541
 msgid ""
-"The B<dh_installdeb> command now shell escapes the lines in the "
+"The B<dh_installdeb> command now shell-escapes the lines in the "
 "F<maintscript> config file.  This was the original intent but it did not "
 "work properly and packages have begun to rely on the incomplete shell "
 "escaping (e.g. quoting file names)."
