--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (10.2) UNRELEASED; urgency=medium
+
+  * Apply patch from Peter Pentchev to fix some typos.
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 05:50:21 +0000
+
 debhelper (10.1) unstable; urgency=medium
 
   * Apply patch from Michael Biebl to take over dh-systemd
@@ -20,7 +26,7 @@ debhelper (10.1) unstable; urgency=medium
     options.  The old variants are accepted for compatibility.
     Thanks to Raphaël Hertzog for the suggestion.
     (Closes: #838446)
-  * cmake.pm: If cmake fails, also down CMakeFiles/CMakeOutput.log
+  * cmake.pm: If cmake fails, also dump CMakeFiles/CMakeOutput.log
     and CMakeFiles/CMakeError.log if they are present.  Thanks to
     Michael Banck for the suggestion.  (Closes: #839389)
   * d/copyright: Correct copyright and license of dh_systemd*
