--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -1215,7 +1215,7 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:506
-msgid "The main affects of this are:"
+msgid "The main effects of this are:"
 msgstr "Die wichtigsten Auswirkungen davon sind:"
 
 #. type: textblock
@@ -1235,7 +1235,7 @@ msgstr ""
 msgid ""
 "The main caveat is that B<dh_*> now only keeps track of what happened in a "
 "single override target.  When all the calls to a given B<dh_cmd> command "
-"happens in the same override target every thing will work as before."
+"happens in the same override target everything will work as before."
 msgstr ""
 "Der Pferdefuss hier liegt darin, dass B<dh_*> nun nur noch nachverfolgt, was "
 "in einem einzelnen außer Kraft setzenden Ziel geschieht. Wenn alle Aufrufe "
@@ -1288,7 +1288,7 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:541
 msgid ""
-"The B<dh_installdeb> command now shell escapes the lines in the "
+"The B<dh_installdeb> command now shell-escapes the lines in the "
 "F<maintscript> config file.  This was the original intent but it did not "
 "work properly and packages have begun to rely on the incomplete shell "
 "escaping (e.g. quoting file names)."
