--- a/man/po4a/po/pt.po
+++ b/man/po4a/po/pt.po
@@ -1203,7 +1203,7 @@ msgstr ""
 
 #. type: textblock
 #: debhelper.pod:506
-msgid "The main affects of this are:"
+msgid "The main effects of this are:"
 msgstr "Os principais efeitos disto são:"
 
 #. type: textblock
@@ -1222,7 +1222,7 @@ msgstr ""
 msgid ""
 "The main caveat is that B<dh_*> now only keeps track of what happened in a "
 "single override target.  When all the calls to a given B<dh_cmd> command "
-"happens in the same override target every thing will work as before."
+"happens in the same override target everything will work as before."
 msgstr ""
 "O principal embargo é que B<dh_*> agora apenas mantêm acompanhamento do que "
 "aconteceu numa meta de sobreposição singular. Quanto todas as chamadas a um "
@@ -1275,7 +1275,7 @@ msgstr ""
 #. type: textblock
 #: debhelper.pod:541
 msgid ""
-"The B<dh_installdeb> command now shell escapes the lines in the "
+"The B<dh_installdeb> command now shell-escapes the lines in the "
 "F<maintscript> config file.  This was the original intent but it did not "
 "work properly and packages have begun to rely on the incomplete shell "
 "escaping (e.g. quoting file names)."
